# Monochrome_rust

./: Cargo.toml  README.md  build.bat  changelog.md  log.txt  settings.json  start.bat
data/localization/: english.json
data/old/: settings.json
data/old/attacks/: attacks.crocotile
data/old/core/: monster.json
data/old/core/animations/: ani_player.json
data/old/core/localization/: english.json
data/old/core/regions/: regionTest.json
data/old/core/tiles/: tile_uvani_test.gltf  tiles.crocotile  uvAnimation.txt
data/old/localization/: english.json
data/old/maps/: mapTest.json  regionTest.json
data/old/private/localization/: english.json
data/shaders/: lighting.fs  lighting.vs  tile.fs  transparency.fs  write_depth.fs
data/sprites/overworld/: animations.json  background_forest.aseprite  backsprite.aseprite
data/tiles/: material.mtl  tiles2.crocotile
data/world/: newbark.json  test.json
data/world/newbark/: battles.json  entities.json  events.json  map.json  map_2.json  map_3.json  maptest.json
src/: audio.rs  camera.rs  data.rs  gSettings.rs  graphics.rs  lib.rs  localization.rs  main.rs  player.rs  raylib.rs  settings.rs  world.rs
src/audio/: mod.rs
src/battle/: mod.rs
src/camera/: mod.rs
src/data/: mod.rs
src/events/: animation.rs  conditionals.rs  event_handler.rs  mod.rs  mod_old.rs  parser.rs  textbox.rs
src/monsters/: mod.rs
src/overworld/: mod.rs
src/raylib/: enums.rs  fonts.rs  math.rs  mod.rs  shaders.rs  structures.rs  vectors.rs
src/utilities/: debug.rs  math.rs  mod.rs
src/world/: mod.rs
(+5 files in other folders)
