[package]
name = "monorust"
version = "0.1.0"
edition = "2021"

[lib]
name = "monorust"
crate-type = ["lib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib-ffi   = "4.5.3"
once_cell   = "1.18.0"
serde      = "1.0.107"
serde_json = "1.0.107"
chrono      = "0.4.31"